--- a/Ollo-Cashflow/Views/Report/Report.cshtml
+++ b/Ollo-Cashflow/Views/Report/Report.cshtml
@@ -10,7 +10,7 @@
 @{
     if (ViewBag.isReportDataProcessed)
     {
-        <h3>Report Data has been Processed</h3>
+        <h3>Treasury Report</h3>
         <table style="width: 100%">
             <tr>
                 <th>Total</th>
@@ -35,6 +35,7 @@
                 <td>94</td>
             </tr>
         </table>
+    <p>Report Generated on @DateTime.Now</p>
     }
     else
     {
