UC Correctly Processed without view

--- a/Ollo-Cashflow/Views/Report/Report.cshtml
+++ b/Ollo-Cashflow/Views/Report/Report.cshtml
@@ -4,134 +4,8 @@
 
 @{
     ViewBag.Title = "Report";
-    List<Report> reportDataList = ViewBag.GetAllReportData;
+    Html.RenderPartial("TreasuryReportPartial");
 }
-<style type="text/css">
-    body {
-        font-family: Tahoma;
-    }
-
-    h2 {
-        color: red;
-    }
-
-    table {
-        border: 1px solid black;
-        border-spacing: 0;
-    }
-
-    td {
-         border: 1px solid black;
-        color: green;
-        font-size: .8em;
-        padding: 3px;
-         text-align: center;
-    }
-    th {
-         border: 1px solid black;
-        text-align: center;
-        padding: 3px;
-        font-size: .8em;
-        
-    }
-    .heading {
-        background: #ccc;
-    }
-    .container {
-        width: 1250px;
-    }
-</style>
 
 
-
-<h2>CashFlow System </h2>
-@{
-    if (ViewBag.isReportDataProcessed)
-    {
-        <h3>Treasury Report</h3>
-    <table style="width: 100%" id="tbl" border="1" runat="server">
-        <tr>
-            <th></th>
-            <th>Total</th>
-            @{
-        foreach (Report item in reportDataList)
-        {
-            if (item.DataType == "BB")
-            {
-                <th>@item.Source</th>
-            }
-        }
-            }
-        </tr>
-        <tr>
-            <th>Date</th>
-            <th></th>
-            @{
-        foreach (Report item in reportDataList)
-        {
-            if (item.DataType == "BB")
-            {
-
-
-                <td>@string.Format("{0:d/M/yyyy}", item.SourcePeriod)</td>
-            }
-        }
-            }
-        </tr>
-
-        <tr>
-            <th>Balance</th>
-            @{
-        double TotalBalance = 0;
-        foreach (Report item in reportDataList)
-        {
-            if (item.DataType == "BB")
-            {
-                TotalBalance = TotalBalance + item.Amount;
-            }
-        }
-
-        //<th>@TotalBalance</th>
-        <th>@String.Format(new CultureInfo("bn-BD"), "{0:C}", @TotalBalance)</th>
-
-            }
-
-            @{
-        foreach (Report item in reportDataList)
-        {
-            if (item.DataType == "BB")
-            {
-                //<th>@item.Amount</th>
-                <th>@String.Format(new CultureInfo("bn-BD"), "{0:C}", @item.Amount)</th>
-            }
-        }
-            }
-        </tr>
-
-
-
-
-
-
-
-
-
-        @*<tr>
-                <td>Jill</td>
-                <td>Smith</td>
-                <td>50</td>
-            </tr>
-            <tr>
-                <td>Eve</td>
-                <td>Jackson</td>
-                <td>94</td>
-            </tr>*@
-    </table>
-    <p>Report Generated on @DateTime.Now</p>
-    }
-    else
-    {
-        <h3>Report Data has not been Processed  </h3>
-    }
-}
 @Html.ActionLink("Export to Excel","Export","Report")
